gccida/c2/unsave_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2110:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2112:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2122:19: error: expected expression
v3 = ( tree_node *)ggc_alloc( 0x28uLL); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2122:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)ggc_alloc( 0x28uLL); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2123:12: error: expected expression
*( _OWORD *)&v3->common.chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/tree.c:2123:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v3->common.chain = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsave_expr/src/obj/tree.o] Error 1
